added comment about filtering unnecessary columns

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -86,6 +86,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the dataset and filter the out unnecessary columns like 'headers', 'footers' and 'quotes'. Then, print the time it took to complete this process."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
