added comment about tfidf vectorizer

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -107,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract tf-id features for NMF. The tfidf_vectorizer method will take a collection of raw documents and convert them into a matrix."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
