added comment about tfidf CountVectorizer

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -130,6 +130,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the CountVectorizer feature to convert a collection of text documents to a matrix of token counts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
