added comment about fitting the NMF model

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -154,6 +154,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit the NMF model using tf-idf features and then print the topics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
