added comment about fitting the NMF model suing Kullback-Leibler

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -181,6 +181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit the NMF model using the Kullback-Leibler divergence method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
