added comment about printing topics using Kullback-Leibler

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -210,6 +210,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Print the topics of NMF model by Kullback-Leibler divergence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"\\nTopics in NMF model (generalized Kullback-Leibler divergence):\")\n",
     "tfidf_feature_names = tfidf_vectorizer.get_feature_names()\n",
     "print_top_words(nmf, tfidf_feature_names, n_top_words)"
