added comment about LDA model

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -205,10 +205,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Print the topics of NMF model by Kullback-Leibler divergence."
    ]
@@ -222,6 +220,13 @@
     "print(\"\\nTopics in NMF model (generalized Kullback-Leibler divergence):\")\n",
     "tfidf_feature_names = tfidf_vectorizer.get_feature_names()\n",
     "print_top_words(nmf, tfidf_feature_names, n_top_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the LDA model with the tf features and the time it takes to compelte the process. "
    ]
   },
   {
