added comment about topics in LDA model

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -248,6 +248,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the topics in the LDA model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
