define cross validation model

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -264,6 +264,22 @@
     "tf_feature_names = tf_vectorizer.get_feature_names()\n",
     "print_top_words(lda, tf_feature_names, n_top_words)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the cross validation model with 10 folds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyze_model(model=None, folds=10):"
+   ]
   }
  ],
  "metadata": {
