--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -280,6 +280,13 @@
    "source": [
     "def analyze_model(model=None, folds=10):"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load and define the values"
+   ]
   }
  ],
  "metadata": {
