--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -285,7 +285,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load and define the values"
+    "Load and define the values and convert to numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y, X_test = load()\n",
+    "y = y.values   # to numpy\n",
+    "X = X.values\n",
+    "if not model:\n",
+    "    model = load_model()"
    ]
   }
  ],
