--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -269,6 +269,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Homework 2: Analyzing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Define the cross validation model with 10 folds"
    ]
   },
@@ -278,7 +285,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analyze_model(model=None, folds=10):"
+    "X, y, X_test = load()\n",
+    "y = y.values   # to numpy\n",
+    "X = X.values\n",
+    "if not model:\n",
+    "    model = load_model()"
    ]
   },
   {
@@ -294,11 +305,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y, X_test = load()\n",
-    "y = y.values   # to numpy\n",
-    "X = X.values\n",
-    "if not model:\n",
-    "    model = load_model()"
+    "def analyze_model(model=None, folds=10):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manual x-validation to accumulate actual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_skf = StratifiedKFold(y, n_folds=folds, shuffle=False, random_state=42)\n",
+    "scores = []\n",
+    "conf_mat = np.zeros((2, 2))      # Binary classification\n",
+    "false_pos = Set()\n",
+    "false_neg = Set()"
    ]
   }
  ],
