for loop for prediction

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -327,6 +327,24 @@
     "false_pos = Set()\n",
     "false_neg = Set()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For loop to traverse all the values for the prediction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for train_i, val_i in cv_skf:\n",
+    "    X_train, X_val = X[train_i], X[val_i]\n",
+    "    y_train, y_val = y[train_i], y[val_i]"
+   ]
   }
  ],
  "metadata": {
