--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -345,6 +345,23 @@
     "    X_train, X_val = X[train_i], X[val_i]\n",
     "    y_train, y_val = y[train_i], y[val_i]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit the fold and print it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print \"Fitting fold...\"\n",
+    "    model.fit(X_train, y_train)"
+   ]
   }
  ],
  "metadata": {
