--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -362,6 +362,28 @@
     "print \"Fitting fold...\"\n",
     "    model.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict the fold and print it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print \"Predicting fold...\"\n",
+    "    y_pprobs = model.predict_proba(X_val)      \n",
+    "    y_plabs = np.squeeze(model.predict(X_val))  \n",
+    "    \n",
+    "    scores.append(roc_auc_score(y_val, y_pprobs[:, 1]))\n",
+    "    confusion = confusion_matrix(y_val, y_plabs)\n",
+    "    conf_mat += confusion"
+   ]
   }
  ],
  "metadata": {
