false positive and negatives

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -384,6 +384,25 @@
     "    confusion = confusion_matrix(y_val, y_plabs)\n",
     "    conf_mat += confusion"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Collect information on false postive and negatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_i = np.where((y_plabs==1) & (y_val==0))[0]\n",
+    "    fn_i = np.where((y_plabs==0) & (y_val==1))[0]\n",
+    "    false_pos.update(val_i[fp_i])\n",
+    "    false_neg.update(val_i[fn_i])"
+   ]
   }
  ],
  "metadata": {
