--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -403,6 +403,30 @@
     "    false_pos.update(val_i[fp_i])\n",
     "    false_neg.update(val_i[fn_i])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print all results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print \"Fold score: \", scores[-1]\n",
+    "print \"Fold CM: \\n\", confusion\n",
+    "\n",
+    "print \"\\nMean score: %0.2f (+/- %0.2f)\" % (np.mean(scores), np.std(scores) * 2)\n",
+    "conf_mat /= folds\n",
+    "print \"Mean CM: \\n\", conf_mat\n",
+    "print \"\\nMean classification measures: \\n\"\n",
+    "pprint(class_report(conf_mat))\n",
+    "return scores, conf_mat, {'fp': sorted(false_pos), 'fn': sorted(false_neg)}"
+   ]
   }
  ],
  "metadata": {
