--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Homework 2: Analyzing"
+    "# Homework 2: Analyzing"
    ]
   },
   {
@@ -426,6 +426,30 @@
     "print \"\\nMean classification measures: \\n\"\n",
     "pprint(class_report(conf_mat))\n",
     "return scores, conf_mat, {'fp': sorted(false_pos), 'fn': sorted(false_neg)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate and print classification measures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_report(conf_mat):  \n",
+    "    tp, fp, fn, tn = conf_mat.flatten()\n",
+    "    measures = {}\n",
+    "    measures['accuracy'] = (tp + tn) / (tp + fp + fn + tn)\n",
+    "    measures['specificity'] = tn / (tn + fp)        # (true negative rate)\n",
+    "    measures['sensitivity'] = tp / (tp + fn)        # (recall, true positive rate)\n",
+    "    measures['precision'] = tp / (tp + fp)\n",
+    "    measures['f1score'] = 2*tp / (2*tp + fp + fn)\n",
+    "    return measures"
    ]
   }
  ],
