calculate tf-id values

--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -451,6 +451,65 @@
     "    measures['f1score'] = 2*tp / (2*tp + fp + fn)\n",
     "    return measures"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Produce tf-id matrix by transforming the text document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xtr = vec_pipe.fit_transform(X)\n",
+    "vec = vec_pipe.named_steps['vec']\n",
+    "features = vec.get_feature_names("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the top N tf-id values in the each row and return with the corressponding feature names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_tfidf_feats(row, features, top_n=25):\n",
+    "    ''' Get top n tfidf values in row and return them with their corresponding feature names.'''\n",
+    "    topn_ids = np.argsort(row)[::-1][:top_n]\n",
+    "    top_feats = [(features[i], row[i]) for i in topn_ids]\n",
+    "    df = pd.DataFrame(top_feats)\n",
+    "    df.columns = ['feature', 'tfidf']\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert single row document to dense format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_feats_in_doc(Xtr, features, row_id, top_n=25):\n",
+    "''' Top tfidf features in specific document (matrix row) '''\n",
+    "row = np.squeeze(Xtr[row_id].toarray())\n",
+    "return top_tfidf_feats(row, features, top_n)"
+   ]
   }
  ],
  "metadata": {
